--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                   <li>BootStrap</li>
                 </ol>
                 <div class="work-links">
-                  <a href="#" target="_blank" rel="noopener" class="link"
+                  <a href="https://parthz2005.github.io/my-e-commerce/" target="_blank" rel="noopener" class="link"
                     >Explore this project</a
                   >
 
@@ -142,7 +142,7 @@
               <picture class="work-img">
                 <img
                   loading="lazy"
-                  src="assets/images/work/portfolio.png"
+                  src="assets/images/work/ecom.png"
                   alt="contribute dev"
                 />
               </picture>
