--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
                       <li>HTML</li>
                       <li>CSS</li>
                       <li>JavaScript</li>
+                      <li>Core PHP</li>
                       <li>BootStrap</li>
                       <li>GitHub</li>
                     </ul>
