--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </ol>
 
                 <div class="work-links">
-                  <a href="https://github.com/parth2005" target="_blank" rel="noopener" class="link"
+                  <a href="https://parth2005.github.io/my-e-commerce/" target="_blank" rel="noopener" class="link"
                     >Explore this project</a
                   >
 
@@ -86,7 +86,7 @@
               <picture class="work-img">
                 <img
                   loading="lazy"
-                  src="assets/images/work/pot1.png"
+                  src="assets/images/ecom.png"
                   alt="agency elevation"
                 />
               </picture>
@@ -132,7 +132,7 @@
                   <li>BootStrap</li>
                 </ol>
                 <div class="work-links">
-                  <a href="https://parthz2005.github.io/my-e-commerce/" target="_blank" rel="noopener" class="link"
+                  <a href="https://parthz2005.github.io/my-portfolio/" target="_blank" rel="noopener" class="link"
                     >Explore this project</a
                   >
 
@@ -142,7 +142,7 @@
               <picture class="work-img">
                 <img
                   loading="lazy"
-                  src="assets/images/work/ecom.png"
+                  src="assets/images/work/portfolio.png"
                   alt="contribute dev"
                 />
               </picture>
