--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </ol>
 
                 <div class="work-links">
-                  <a href="https://parth2005.github.io/my-e-commerce/" target="_blank" rel="noopener" class="link"
+                  <a href="https://parthz2005.github.io/my-e-commerce/" target="_blank" rel="noopener" class="link"
                     >Explore this project</a
                   >
 
